# ira-workshop

./: .gitignore
.github/workflows/: auto-invite.yml  auto-merge.yml  deploy-pr-dashboard.yml
.qoder/rules/: ruhtml.md
gh-pages/: index.html  pr-dashboard.html
group-0/spec-template/: 01-Spec写作总则与文档编号索引.md  02-需求来源与采集记录.md  03-立项提案与范围说明.md  04-产品需求说明.md  05-用户故事与验收标准.md  06-功能规格说明.md  07-非功能需求与约束.md  08-系统架构与技术选型.md  09-API接口规格.md  10-数据模型与存储规格.md  11-安全设计规格.md  12-实施计划与里程碑.md  13-测试策略与质量门禁.md  14-需求追踪矩阵.md
group-a/: README.md
group-b/07/: 实验一：web页面测试项目.html  实验二：项目扫描生成时序图.md
group-c/06/: dingtalk_push_flow_analysis.html
group-d/04/: 四组-技术文档规范.md
group-d/07/: README.md  start.bat
group-d/07/backend/: .gitignore  pyproject.toml  uv.toml
group-d/07/backend/app/: __init__.py  config.py  database.py  main.py
group-d/07/backend/app/models/: __init__.py  contest.py  fund.py  holding.py  order.py  transaction.py  user.py
group-d/07/backend/app/routers/: __init__.py  auth.py  contests.py  funds.py  portfolio.py  rankings.py  trade.py  transactions.py  users.py
group-d/07/backend/app/schemas/: __init__.py  auth.py  contest.py  fund.py  holding.py  order.py  transaction.py  user.py
group-d/07/backend/app/utils/: __init__.py  mock_data.py  security.py
group-d/07/backend/lab1/: index.html
group-d/07/backend/lab1/css/: style.css
group-d/07/backend/lab1/js/: api.js  app.js  sectors.js  stocks.js
group-d/08/: AI分析配置说明.md  QUICKSTART.md  README.md  start-all.sh  start-backend.sh  start-frontend.sh
test.dtou/: .env.example  .gitignore
(+882 files in other folders)
